# otp

./: .env.example  .mcp.json  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/memory/: architecture.md  conventions.md  integrations.md
app/: config.py  db.py  exceptions.py  main.py
app/api/: deps.py  example.py  health.py  otp.py  router.py  status.py  webhooks_inbound.py
app/integrations/: http_client.py  messaging.py  notify_client.py  redis_client.py  webhooks.py
app/models/: __init__.py  example.py  otp.py  otp_config.py
app/schemas/: example.py  otp.py  otp_config.py
app/services/: example_service.py  notify.py  otp.md  otp.py
app/utils/: logging.py
app/workers/: example_consumer.py
migrations/models/: 0_20260507223547_init.py  1_20260509011103_None.py
scripts/: claude.sh  new_service.sh
tests/: conftest.py  test_items.py  test_otp.py
