[project]
name = "microservice-template"
version = "0.1.0"
description = "Template generico de microserviço FastAPI + Tortoise ORM (clone-and-rename)"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "tortoise-orm>=0.21",
    "aerich>=0.7",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "redis>=5.0",
    "aio-pika>=9.4",
    "structlog>=24.4",
    "python-dotenv>=1.0",
    "asyncpg>=0.29",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]
